Adicao da rota para remover item da lista
