# server/controllers/food_list_controller.py
@@ -1,4 +1,4 @@
-from server.services.food_list_service import get_food_list, add_to_food_list
+from server.services.food_list_service import get_food_list, add_to_food_list, delete_item_to_food_list
 
 
 def get_list():
@@ -8,3 +8,7 @@ def get_list():
 def send_to_food_list(**kwargs):
     item = kwargs.get('body')
     return add_to_food_list(item)
+
+def delete_item(id):
+    id = int(id)
+    return delete_item_to_food_list(id)
